# _deeptech

./: .dockerignore  .env.example  .env.staging.example  .gitignore  ARCHITECTURE_AND_READINESS.md  BACKEND_TEST_RESULTS.md  BETA_IMPLEMENTATION_GUIDE.md  BETA_QUICK_REFERENCE.md  BETA_READINESS_PLAN.md  BETA_READINESS_SUMMARY.md  CODEBASE_BUGS_REPORT.md  COMPLETE_CLEANUP_SUMMARY.md  COMPREHENSIVE_DEBUGGING_REPORT.md  Dockerfile  FINAL_CLEANUP_COMPLETE.md  FINAL_CLEANUP_REPORT.md  FINAL_PATCH_SUMMARY.md  FINAL_REVIEW.md  FINAL_STATUS.md  LICENSE  Makefile  PATCH_PROGRESS_REPORT.md  PHASE_THREE_DEPLOYMENT_STATUS.md  PHASE_THREE_EXECUTION_PLAN.md  PHASE_THREE_WEEK2_STATUS.md  PHASE_THREE_WEEK2_TASK3_STATUS.md  PHASE_THREE_WEEK3_STATUS.md  PHASE_THREE_WEEK5_FINAL_REPORT.md  PHASE_THREE_WEEK5_STATUS.md  PHASE_THREE_WEEK6_STATUS.md  PHASE_THREE_WEEK6_STATUS.md.backup  POLISHING_FINAL_REPORT.md  POLISHING_PROGRESS.md  PRODUCTION_READINESS_PLAN.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_FINAL_SUMMARY.md  QUALITY_REVIEW_2025-11-10.md  README.md  SECURITY_REMEDIATION_LOG.md  WEEK1_PROGRESS.md  (+12 more)
config/: settings.yaml
docs/: API.md  API_EXAMPLES.md  API_INTEGRATION_COMPLETE.md  BACKUP.md  BACKUP_RECOVERY.md  CI_CD.md  CROSS_SOURCE_CORROBORATION.md  DATABASE_INDEX_OPTIMIZATION.md  DEPLOYMENT.md  ENTITY_UI_IMPLEMENTATION.md  EXPERIMENTS.md  KUBERNETES_DEPLOYMENT.md  MIGRATION_TESTING.md  MONITORING.md  MONITORING_SETUP.md  OPERATIONS.md  PERFORMANCE_BENCHMARKS.md  PHASE_FIVE_SOURCE_INTEGRATIONS.md  PHASE_THREE_SCALING.md  PHASE_THREE_WEEK6_TASK1_COMPLETE.md  POSTGRESQL_MIGRATION_GUIDE.md  POSTGRESQL_SETUP.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READINESS_CHECKLIST.md  QUERY_PROFILING_REPORT.md  README.md  ROLLBACK.md  SECURITY_AUDIT.md  STAGING_DEPLOYMENT_RUNBOOK.md  STAGING_VALIDATION_SUMMARY.md  TASK_3_MONITORING_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4_AUDIT_SUMMARY.md  TASK_9_TEST_SUITE_SUMMARY.md  TEAM_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
frontend/: .env.example  .eslintrc.cjs  INTEGRATION_CHECKLIST.md  cypress.config.ts  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
k8s/: README.md  signal-harvester-api.yaml
migrations/: env.py
monitoring/: alertmanager.yml  grafana-datasources.yml
results/: LOAD_TEST_BASELINE_REPORT.md
scripts/: deploy-k8s.sh  deploy-monitoring-docker.sh  deploy-monitoring.sh  init_postgres_schema.py  load_test.py  load_test_k6.js  load_test_simple_k6.js  migrate_sqlite_to_postgresql.py  migrate_to_postgresql.py  performance_test.py  profile_queries.py  security_scan.sh  test_migration.py  validate-monitoring.sh  validate_postgresql.py
snapshots/: index.html  latest.json  robots.txt  sitemap.xml  snapshots.atom  snapshots.json
tests/: __init__.py  conftest.py  test_api.py  test_api_compression.py  test_api_discovery_endpoints.py  test_api_prometheus.py  test_api_security.py  test_api_signals.py  test_api_snapshots.py  test_backtest_command.py  test_backup.py  test_backup_simple.py  test_cache.py  test_config.py  test_connection_pool.py  test_contract_api_frontend.py  test_db.py  test_discovery_cli.py  test_discovery_pipeline.py  test_embeddings.py  test_entity_ui.py  test_experiment_ui.py  test_experiment_ui.py.backup  test_experiments.py  test_html.py  test_identity_resolution.py  test_init_postgres_schema.py  test_integration.py  test_linkedin_client.py  test_monitoring_endpoints.py  test_notifier.py  test_notifier_retry.py  test_pagination.py  test_performance_regression.py  test_phase2_5_facebook.py  test_phase2_5_facebook_simple.py  test_phase2_5_github.py  (+24 more)
(+218 files in other folders)
